--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "matplotlib>=3.10.7",
     "nfl-data-py>=0.3.2",
     "nflreadpy>=0.1.3",
     "numpy>=2.3.3",
     "pandas>=2.3.2",
     "pyarrow>=21.0.0",
     "scikit-learn>=1.7.2",
+    "xgboost>=3.0.5",
 ]
