--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "numpy>=2.3.3",
     "pandas>=2.3.2",
     "pyarrow>=21.0.0",
+    "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.2",
     "xgboost>=3.0.5",
 ]
